Added top nav bar.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Google</title>
 </head>
 
+
+
 <body id="main">
+
+    <nav>
+        <ul>
+            <li><a href="" class="signbutton">Sign In</a></li>
+            <li><div class="appsicon"><a href=""><img class="icon" src="/img/appsicon.png"></a></div></li>
+            <div class="links">
+                <li><a href="">Images</a></li>
+                <li><a href="">Gmail</a></li>
+            </div>
+        </ul>
+
+    </nav>
+
     <div class="center">
         <div class="logo">
             <img src="../img/google-logo.png" height="92" width="272" style="padding-top: 109px">
@@ -18,8 +33,8 @@
                     <input type="text" class="searchbar">
                 </div>
                 <div id="voicesearch">
-                        <img src="/img/mic.png" style="width: 24px; height: 24px;">
-                        <span id="tooltiptext">Search by voice</span>
+                    <img src="/img/mic.png" style="width: 24px; height: 24px;">
+                    <span id="tooltiptext">Search by voice</span>
                 </div>
             </div>
             <div class="searchbuttons">
