Trying to fix urls so Github Pages show images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="" class="signbutton">Sign In</a></li>
-            <li><div class="appsicon"><a href=""><img class="icon" src="/img/appsicon.png"></a></div></li>
+            <li><div class="appsicon"><a href=""><img class="icon" src="img/appsicon.png"></a></div></li>
             <div class="links">
                 <li><a href="">Images</a></li>
                 <li><a href="">Gmail</a></li>
@@ -25,7 +25,7 @@
 
     <div class="center">
         <div class="logo">
-            <img src="../img/google-logo.png" height="92" width="272" style="padding-top: 109px">
+            <img src="img/google-logo.png" height="92" width="272" style="padding-top: 109px">
         </div>
         <form>
             <div class="searchbarbox">
@@ -33,7 +33,7 @@
                     <input type="text" class="searchbar">
                 </div>
                 <div id="voicesearch">
-                    <img src="/img/mic.png" style="width: 24px; height: 24px;">
+                    <img src="img/mic.png" style="width: 24px; height: 24px;">
                     <span id="tooltiptext">Search by voice</span>
                 </div>
             </div>
