--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="UTF-8">
@@ -9,15 +10,16 @@
 
 
 
-<body id="main">
-
+<body>
     <nav>
         <ul>
-            <li><a href="" class="signbutton">Sign In</a></li>
-            <li><div class="appsicon"><a href=""><img class="icon" src="img/appsicon.png"></a></div></li>
+            <li class="top"><a href="" class="signbutton">Sign In</a></li>
+            <li class="top">
+                <div class="appsicon"><a href=""><img class="icon" src="img/appsicon.png"></a></div>
+            </li class="top">
             <div class="links">
-                <li><a href="">Images</a></li>
-                <li><a href="">Gmail</a></li>
+                <li class="top"><a href="">Images</a></li>
+                <li class="top"><a href="">Gmail</a></li>
             </div>
         </ul>
 
@@ -47,3 +49,23 @@
         </div>
     </div>
 </body>
+
+<div class="bottom">
+    <div class="bottombars">
+        <ul>
+            <li><a class="bottomlinks" style="font-size: 15px;">Japan</a></li>
+        </ul>
+    </div>
+    <div class="bottombars">
+        <ul>
+            <li class="bot1"><a class="bottomlinks">Advertising</a></li>
+            <li class="bot1"><a class="bottomlinks">Business</a></li>
+            <li class="bot1"><a class="bottomlinks">About</a></li>
+            <li class="bot2"><a class="bottomrightlinks">Settings</a></li>
+            <li class="bot2"><a class="bottomrightlinks">Terms</a></li>
+            <li class="bot2"><a class="bottomrightlinks">Privacy</a></li>
+        </ul>
+    </div>
+</div>
+
+</html>
