Last (fixed bottom bar links)

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     </div>
     <div class="bottombars">
         <ul>
-            <li class="bot1"><a class="bottomlinks">Advertising</a></li>
-            <li class="bot1"><a class="bottomlinks">Business</a></li>
-            <li class="bot1"><a class="bottomlinks">About</a></li>
-            <li class="bot2"><a class="bottomrightlinks">Settings</a></li>
-            <li class="bot2"><a class="bottomrightlinks">Terms</a></li>
-            <li class="bot2"><a class="bottomrightlinks">Privacy</a></li>
+            <li class="bot1"><a href=""  class="bottomlinks">Advertising</a></li>
+            <li class="bot1"><a href=""  class="bottomlinks">Business</a></li>
+            <li class="bot1"><a href=""  class="bottomlinks">About</a></li>
+            <li class="bot2"><a href=""  class="bottomrightlinks">Settings</a></li>
+            <li class="bot2"><a href=""  class="bottomrightlinks">Terms</a></li>
+            <li class="bot2"><a href="" class="bottomrightlinks">Privacy</a></li>
         </ul>
     </div>
 </div>
